welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:14: error: reassignment to val
			nbPas2 = nbPas2 + 1
                               ^