welcome.lessons.welcome.loopfor.LoopFor.scala.code
var nbPas = 0
var nbPas2 = 0
while (nbPas!=nbPas2) {
	if (!estSurBiscuit) {
		avance()
		nbPas = nbPas + 1
	}
	if (estSurBiscuit) {
		prendBiscuit()
		porteBiscuit()
		for (nbPas2 <- 0 to nbPas) {
			recule()
			nbPas2 = nbPas2 + 1
			}
	}
}
